# OmniGuard_AI

./: .gitignore  METRICS.md  NOTES.md  README.md  _last_plan.md  detector_v1.py  experiment.py  pyproject.toml  requirements.txt
data/: store.pkl
scripts/: evaluate.py  generate_data.py  play.py
src/omniguard/: detector.py  embedder.py  vector_store.py
src/omniguard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_detector.py  test_vector_store.py
