[project]
name = "omniguard"
version = "0.1.0"
description = "Hybrid RAG anomaly detection for LLM outputs"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle errors/warnings
# F:   pyflakes (unused imports, etc.)
# I:   isort (import ordering)
# UP:  pyupgrade (modern Python syntax)
# B:   bugbear (common bug patterns)
# SIM: simplify (cleaner code suggestions)
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
